tests/ttt-30-strict-id-attempt-2/type-errors/type-errors.ts
import { Id } from './id1';
import { getMarketId } from './id2';

const id1 = 'id1' as Id;

const result = getMarketId(id1);
